Fixed subsection coloration/boldness, realigned titles and codenumbers

--- a/css/new_a.css
+++ b/css/new_a.css
@@ -3,10 +3,37 @@ xxxxxxxxx.mathbook-content tt.code-inline {
     font-size: 200%;
 }
 
-#toc > ul  a  {
+#toc > ul > li> a, #toc > ul > li> a:link, #toc > ul > li> a:visited {
     font-weight: bold;
+    color: #ffffff;
+    background: #3572a0;
+    font-family: "PT Serif", "Times New Roman", Times, serif;
+    padding-left: 0.2em;
 }
 
+#toc > ul > li:not(:first-child) {
+    margin-top: 0.3em;
+}
+
+#toc > ul > li:first-child .title {
+    margin-left: 2em;
+}
+
+#toc > ul > li > a .codenumber {
+    position: absolute;
+    margin-right: 0;
+    margin-left: 0.5em;
+    left: 0.3em;
+    display: inline-block;
+}
+
+#toc > ul > li > a .codenumber + .title {
+    margin-left: 2em;
+}
+
+/*#toc ul li:first-child {
+   margin-top: 0;
+}
 
 #toc ul li a, #toc ul li a:link, #toc ul li a:visited {
     color: #ffffff;
@@ -16,4 +43,4 @@ xxxxxxxxx.mathbook-content tt.code-inline {
 #toc ul li ul li a, #toc ul li a ul li a:link, #toc ul li ul li a:visited {
     color: #671d12;
     background: #f0f0f0;
-  }
+  }*/
